# tdgame

./: .gitignore  Cargo.toml
.cargo/: config.toml.opt
src/: client.rs  editor.rs  main.rs
src/dbg/: basic.rs  logging.rs  mod.rs  sprite_dbg.rs  world_dbg.rs
src/ecs/: dbg.rs  mod.rs  resolution.rs  simple.rs  tower.rs  window.rs
src/ecs/components/: mod.rs  simple.rs  tower.rs
src/editor/: mod.rs
src/scenes/: load_screen.rs  loading.rs  mod.rs
src/state/: appstate.rs  loading_state.rs  menu_startup_state.rs  mod.rs  plugin.rs  world.rs
src/state/menu_startup/: assets.rs  background.rs  events.rs  mod.rs  plugin.rs  resources.rs  styles.rs  txtbuilder.rs
src/state/menu_startup/exit_diag/: events.rs  mod.rs
src/state/menu_startup/resources/: mod.rs  styles.rs
src/state/menu_startup/sidebar/: ents.rs  mod.rs
src/state/menu_startup/sidebar/systems/: button.rs  mod.rs  spawn.rs
src/state/menu_startup/systems/: button.rs  mod.rs  sidebar.rs
src/state/menu_startup/universal/: mod.rs
src/state/menu_startup_state/: mod.rs  plugin.rs  resources.rs  systems.rs
src/state/menu_startup_state/resources/: assets.rs  ents.rs  mod.rs  styles.rs
src/state/menu_startup_state/systems/: background.rs  button.rs  mod.rs  sidebar.rs
src/tdcore/: dbg.rs  mod.rs
src/tdcore/client/: mod.rs
src/tdcore/common/: init.rs  materials.rs  mod.rs
src/tdcore/dbg/: basic.rs  logging.rs  mod.rs  sprite_dbg.rs  world_dbg.rs
src/tdcore/ecs/: simple.rs  tower.rs
src/tdcore/editor/: init.rs  load_screen.rs  mod.rs
